[gd_scene load_steps=17 format=2]

[ext_resource path="res://cenas/forca/imagens_letras/image-removebg-preview (1).png" type="Texture" id=1]
[ext_resource path="res://cenas/forca/imagens_letras/image__1_-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://cenas/forca/imagens_letras/image__2_-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://cenas/forca/imagens_letras/image__4_-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://cenas/forca/imagens_letras/image__3_-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://cenas/forca/imagens_forca/New Piskel (3).png" type="Texture" id=6]
[ext_resource path="res://cenas/forca/imagens_forca/pix2.png" type="Texture" id=7]
[ext_resource path="res://cenas/forca/imagens_forca/pix.png" type="Texture" id=8]
[ext_resource path="res://cenas/forca/imagens_forca/forca (5).png" type="Texture" id=9]
[ext_resource path="res://cenas/forca/imagens_forca/New Piskel (5).png" type="Texture" id=10]
[ext_resource path="res://cenas/forca/imagens_forca/inicial.png" type="Texture" id=11]
[ext_resource path="res://cenas/forca/imagens_forca/New Piskel.png" type="Texture" id=12]
[ext_resource path="res://cenas/forca/imagens_forca/5.png" type="Texture" id=13]
[ext_resource path="res://cenas/forca/imagens_forca/New Piskel (4).png" type="Texture" id=14]
[ext_resource path="res://cenas/forca/imagens_forca/confirmar.png" type="Texture" id=15]
[ext_resource path="res://cenas/forca/forca.gd" type="Script" id=16]


[node name="forca" type="Node2D"]
script = ExtResource( 16 )

[node name="Barpix" type="Sprite" parent="."]
position = Vector2( 513.091, 256.187 )
scale = Vector2( 0.619675, 0.616554 )
texture = ExtResource( 8 )

[node name="Pix2" type="Sprite" parent="Barpix"]
position = Vector2( 14.3777, 25.6466 )
scale = Vector2( 1.04852, 0.984543 )

[node name="Pix" type="Sprite" parent="Barpix"]
position = Vector2( 8.33728, 62.9507 )
scale = Vector2( 1.01397, 0.9521 )

[node name="Pix2" type="Sprite" parent="Barpix/Pix"]
position = Vector2( -490.598, -86.8793 )
scale = Vector2( 1.33857, 1.22204 )
texture = ExtResource( 7 )

[node name="fim" type="Sprite" parent="."]
visible = false
position = Vector2( 493, 272 )
scale = Vector2( 2.53125, 2.10938 )

[node name="a" type="Sprite" parent="."]
visible = false
position = Vector2( 692, 352 )
scale = Vector2( 0.802632, 0.802632 )
texture = ExtResource( 4 )

[node name="c" type="Sprite" parent="."]
visible = false
position = Vector2( 565, 358 )
scale = Vector2( 0.712766, 0.712766 )
texture = ExtResource( 5 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 514, 301 )
texture = ExtResource( 9 )

[node name="corpocab" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 302 )
texture = ExtResource( 13 )

[node name="cabeca" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 303 )
texture = ExtResource( 12 )

[node name="inicial" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 304 )
texture = ExtResource( 10 )

[node name="sp1" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 305 )
texture = ExtResource( 14 )

[node name="spt" type="Sprite" parent="."]
visible = false
position = Vector2( 511, 304 )
texture = ExtResource( 6 )

[node name="braco" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 303 )
texture = ExtResource( 11 )

[node name="E" type="Sprite" parent="."]
visible = false
position = Vector2( 177, 348 )
scale = Vector2( 0.622222, 0.622222 )
texture = ExtResource( 1 )

[node name="t" type="Sprite" parent="."]
visible = false
position = Vector2( 308, 351.719 )
scale = Vector2( 0.658537, 0.658536 )
texture = ExtResource( 2 )

[node name="i" type="Sprite" parent="."]
visible = false
position = Vector2( 443, 350 )
scale = Vector2( 0.712766, 0.712766 )
texture = ExtResource( 3 )

[node name="letra" type="LineEdit" parent="."]
margin_left = 639.0
margin_top = 479.0
margin_right = 707.0
margin_bottom = 534.0

[node name="Button" type="TextureButton" parent="."]
margin_left = 738.0
margin_top = 481.0
margin_right = 817.0
margin_bottom = 528.0
texture_normal = ExtResource( 15 )

[node name="erros" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 107.0
margin_top = 459.0
margin_right = 300.0
margin_bottom = 565.0
align = 1
valign = 1

[node name="dica" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 411.0
margin_top = 25.0
margin_right = 987.0
margin_bottom = 165.0
rect_scale = Vector2( 1.4186, 2.02327 )
text = "Para trabalhar na V.Tal é importante ter essa característica e 
seguir restritamente ela 
para manter um ambiente de trabalho confortável e seguro."

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 249.0
margin_top = 316.0
margin_right = 367.0
margin_bottom = 375.0
text = "JOGAR DE NOVO"

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 623.0
margin_top = 308.0
margin_right = 741.0
margin_bottom = 367.0
text = "SAIR PRO MAPA"

[connection signal="text_entered" from="letra" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
